package com.megainf3d.informmodelsystcreator.Tables;

import java.io.Serializable;

public enum AttributeType implements Serializable {
    CHAR,
    INT,
    MONEY,
    DATE,
    IMG
}
