package com.megainf3d.informmodelsystcreator.Tables;

import java.io.Serializable;

public enum KeyType implements Serializable {
    PRIMARY,
    FOREIGN,
    NONE
}
