package com.megainf3d.informmodelsystcreator.Tables;

public interface RelationListener {
    void onEdit();
}
