package com.megainf3d.informmodelsystcreator.Tables;

import java.io.Serializable;

public enum RelationType implements Serializable {
    ONE_TO_ONE,
    MANY_TO_MANY,
    ONE_TO_MANY
}
